[package]
name = "tg-public-log-parser"
authors = ["Mothblocks"]
version = "1.0.0"
edition = "2021"

[dependencies]
axum = "0.8.1"
eyre = "0.6.12"
regex = "1.11.1"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
tokio = { version = "1.42.0", features = ["full"] }
toml = "0.8.19"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["fmt"] }
