[package]
name = "tg-public-log-parser"
authors = ["Mothblocks"]
version = "1.2.2"
edition = "2021"

[dependencies]
axum = "0.8.1"
eyre = "0.6.12"
http = "1.3.1"
parking_lot = "0.12.3"
regex = "1.11.1"
reqwest = { version = "0.12.14", features = ["json"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
tokio = { version = "1.42.0", features = ["full"] }
toml = "0.8.19"
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["cors"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt"] }
